Adding Text-to-Speech Module

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,7 @@
     <ion-grid class="grid-images">
       <ion-row>
         <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
-            <img src="assets/imgs/images/b30101.jpg"/>
+            <img src="assets/imgs/images/b30101.jpg" (click)="say('hello')"/>
            </ion-col>
            <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
               <img src="assets/imgs/images/b30102.jpg"/>
