--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,32 +30,35 @@
             <ion-col col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8>
               <ion-grid>
                 <ion-row>
-                  <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
+                  <ion-col col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2>
                    
                   </ion-col>
-                  <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
+                  <ion-col col-8 col-sm-8 col-md-8 col-lg-8 col-xl-8>
                     <ion-grid>
                       <ion-row>
-                          <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
-                              <img src="assets/imgs/images/b30101.jpg"/>
+                          <ion-col col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3>
+                              <img src="{{selected_subject}}"/>
                           </ion-col>
-                          <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
-                              <img src="assets/imgs/images/b30102.jpg"/>
+                          <ion-col col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3>
+                              <img src="{{selected_verb}}"/>
                           </ion-col>
-                          <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
-                              <img src="assets/imgs/images/b30103.jpg"/>
+                          <ion-col col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3>
+                              <img src="{{selected_complement}}"/>
                           </ion-col>
+                          <ion-col col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3>
+                            <img src="assets/imgs/icons/repeat.png"/>
+                        </ion-col>                          
                         </ion-row>
                     </ion-grid>
                   </ion-col>
-                  <ion-col col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4>
+                  <ion-col col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2>
                     
                   </ion-col>
                 </ion-row>
               </ion-grid>
             </ion-col>
             <ion-col col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2>
-              <img class="icon" src="assets/imgs/icons/back.png" (click)="Back()" />
+              <img class="icon" *ngIf="stack_item.length!=0" src="assets/imgs/icons/back.png" (click)="Back()" />
             </ion-col>
           </ion-row>
     </ion-grid>
